--- a/cultural-food/src/App.css
+++ b/cultural-food/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+body{
+  background:black;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
+.landingpage{
+  background-image: url(https://static.toiimg.com/photo/70189092.cms);
+height:100vh;
+width:100%;
+background-repeat: no-repeat;
+background-size:cover;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
+.landing-content{
+  text-align:center;
+  padding-top:40vh;
+  z-index:1;
+  position:relative;
 
-.App-link {
-  color: #61dafb;
+
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.landing-header{
+  font-size: 40px;
+  color:#fff;
+  font-family: 'Reggae One'
+}
+.landing-link{
+  height:2em;
+  /* position:relative; */
+  color: red;
+  background-color: pink;
 }
