--- a/cultural-food/src/App.css
+++ b/cultural-food/src/App.css
@@ -15,7 +15,7 @@ body{
 }
 
 .landingpage{
-  background-image: url(./components/images/wellcore-foodie.jpg);
+background-image: url(./components/images/wellcore-foodie.jpg);
 height:100vh;
 width:100%;
 background-repeat: no-repeat;
@@ -61,13 +61,11 @@ background-size:cover;
 
 .footer{
   font-family: Verdana, Geneva, sans-serif;
-  font-size: 0.7em;
-  font-weight: bold;
-  color: #FfF;
-  background-color: #666;
+  background-color: rgb(249, 250, 208);
   padding: 10px;
   height: auto;
   width: 100%;
-position: relative;
+  position: relative;
   bottom:0;
+  text-align:center;
 }
