--- a/cultural-food/src/App.css
+++ b/cultural-food/src/App.css
@@ -1,7 +1,10 @@
 
 body{
-  background-image: linear-gradient(to bottom, rgb(248, 211, 217),rgb(248, 248, 228));
+  background:rgb(206, 229, 248);
+}
 
+nav{
+  margin-left:10px;
 }
 .app-header{
   font-family: 'Lobster', cursive;
@@ -9,9 +12,9 @@ body{
   font-size: 50px;
   letter-spacing: 10px;
   font-weight: 900;
-  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);  
+  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
   -webkit-background-clip: text;
-  color: transparent;
+  -webkit-text-fill-color: transparent;
 }
 
 .landingpage{
@@ -20,8 +23,6 @@ height:100vh;
 width:100%;
 background-repeat: no-repeat;
 background-size:cover;
-
-
 }
 .landing-content{
   text-align:center;
@@ -32,23 +33,26 @@ background-size:cover;
 }
 .landing-header{
   font-size: 40px;
+  font-weight: bolder;
   color:rgb(220, 245, 110);
   font-family: 'Ranchers', cursive;
 }
 .landing-link{
   height:2em;
+  font-weight: bold;
   /* position:relative; */
   color: rgb(17, 217, 243);
   background-color: rgb(192, 235, 255);
 }
+
 .food-content{
   display: grid;
   grid-template-columns: repeat(4,1fr);
-  /* grid-template-rows: 300px; */
-  grid-column-gap: 20px;
+  grid-row-gap:auto;
+  grid-column-gap: 3%;
   max-width: 100vw;
-  margin: 70px auto ;
-
+  margin: 5% 5%;
+height:100vh;
   font-family: "Source Sans Pro", sans-serif;
 
 }
@@ -61,11 +65,155 @@ background-size:cover;
 
 .footer{
   font-family: Verdana, Geneva, sans-serif;
-  background-color: rgb(249, 250, 208);
+  /* background-color: rgb(180, 240, 248); */
   padding: 10px;
   height: auto;
   width: 100%;
-  position: relative;
+  position: fixed;
   bottom:0;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  flex-direction: row;
+}
+.footer>div{
+  margin:10px;
+}
+
+.food-infos{
+  display:grid;
+  grid-template-columns: 20vw,30vw;
+  grid-column-gap:  2%;
+  width:60vw;
+  height:100vh;
+  margin:70px auto;
+  font-family: "Raleway", sans-serif;
+}
+.food-pic{
+  grid-column: 1/2;
+  /* grid-row: 1/5; */
+  width:20vw;
+  height:30vh;
+  margin-top:5vw;
+  margin-bottom:100vw;
+}
+.food-info{
+  grid-column:2/2;
+  width:30vw;
+  padding:10px;
+  
+}
+.food-name{
+  
+  font-family: 'Noto Serif JP', serif;
+}
+.nutrient-Link{
+  font-size:20px;
+
+}
+.nutrient-Link:hover{
+color:red;
+
+}
+.food-description{
+  padding-top:20px;
+  margin-top:10px;
+}
+.food-region{
+  font-size:16px;
+}
+.nutrient-food-name{
+  text-align: center;
+  font-family: 'Concert One';
+  font-size:40px;
+  color:rgb(235, 77, 124);
+  margin-top:30px;
+  margin-bottom:30px;
+}
+
+.nutrient-info{
+  background-image: url("./components/images/nutrient.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+margin:auto;
+width:50vw;
+height:70vh;
+border:5px solid #f892d6;
+position:relative;
+margin-bottom: 10%;
+}
+.nutrient-info>h5{
+  font-size:20px;
+  color:rgb(230, 14, 24);
+  margin:auto;
+}
+
+.form{
+   /* border:3px solid blueviolet; */
+  background-image: url("./components/images/back.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin:auto;
+  width:50vw;
+  height:100vh;
+  position:relative;
+  text-shadow: #dfae4b;
+padding:10px;
+
+}
+.form>h2{
   text-align:center;
+  color:blue;
+margin-top:5%;
+}
+.form>label, .form>input,.form>textarea{
+  display:block;
+  width:100%;
+  font-size:20px;
+
+}
+.form>label{
+  margin-top:3%;
+}
+
+.form>button{
+  float:right;
+  font-size:20px;
+  border-radius:5px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .food-content{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-column-gap:10%;
+    max-width: 50vw;
+    height:100vh;
+    position:relative;
+    margin: 10% auto;
+    font-family: "Source Sans Pro", sans-serif;
+  
+  }
+
+  .food-infos{
+    display:grid;
+    margin:auto;
+    grid-template-columns: auto;
+    grid-template-areas: 
+    "a"
+    "b";
+    font-family: "Raleway", sans-serif;
+  }
+  .food-pic{
+    grid-area:a;
+    width:50vw;
+    height:50vh;
+    margin-bottom:0;
+  }
+  .food-info{
+    grid-area:b;
+    margin:auto;
+    width:30vw;
+    padding:10px;
+  }
 }
