--- a/cultural-food/src/App.css
+++ b/cultural-food/src/App.css
@@ -137,7 +137,7 @@ color:red;
   background-repeat: no-repeat;
 margin:auto;
 width:50vw;
-height:70vh;
+height:60vh;
 border:5px solid #f892d6;
 position:relative;
 margin-bottom: 10%;
@@ -147,6 +147,25 @@ margin-bottom: 10%;
   color:rgb(230, 14, 24);
   margin:auto;
 }
+.nutrient-form>button{
+  margin:auto;
+ text-align: center;
+ margin-top: 5px;
+ font-size:25px;
+position:relative;
+font-weight:bolder;
+background:rgb(238, 51, 51);
+padding:5px;
+width:100%;
+}
+.show-me{
+  border:1px solidy rgb(0, 255, 242);
+  margin-top:5px;
+  width:50%;
+  margin:auto;
+
+}
+
 
 .form{
    /* border:3px solid blueviolet; */
@@ -208,7 +227,7 @@ margin-top:5%;
     grid-area:a;
     width:50vw;
     height:50vh;
-    margin-bottom:0;
+    margin-bottom:20px;
   }
   .food-info{
     grid-area:b;
