--- a/cultural-food/src/App.css
+++ b/cultural-food/src/App.css
@@ -138,6 +138,7 @@ color:red;
 margin:auto;
 width:50vw;
 height:60vh;
+min-height:550px;
 border:5px solid #f892d6;
 position:relative;
 margin-bottom: 10%;
@@ -159,10 +160,11 @@ padding:5px;
 width:100%;
 }
 .show-me{
-  border:1px solidy rgb(0, 255, 242);
   margin-top:5px;
-  width:50%;
+  width:200px;
   margin:auto;
+  margin-top:5px;
+  color:rgb(111, 111, 228);
 
 }
 
@@ -174,7 +176,8 @@ width:100%;
   background-repeat: no-repeat;
   margin:auto;
   width:50vw;
-  height:100vh;
+  height:70vh;
+  min-height:850px;
   position:relative;
   text-shadow: #dfae4b;
 padding:10px;
