--- a/cultural-food/src/App.css
+++ b/cultural-food/src/App.css
@@ -18,7 +18,6 @@ nav{
 }
 
 .landingpage{
-background-image: url(./components/images/wellcore-foodie.jpg);
 height:100vh;
 width:100%;
 background-repeat: no-repeat;
@@ -48,17 +47,36 @@ background-size:cover;
 .food-content{
   display: grid;
   grid-template-columns: repeat(4,1fr);
-  grid-row-gap:auto;
+  grid-row-gap:10%;
   grid-column-gap: 3%;
   max-width: 100vw;
   margin: 5% 5%;
 height:100vh;
   font-family: "Source Sans Pro", sans-serif;
+}
+.short-info{
+  display:inline-flex;
+ 
+}
+.food-likes{
+  text-align:right;
+  margin:8px;
+  margin-left:50px;
 
 }
 .home-image{
-  width: 200px;
+  width: 320px;
     height: 300px;
+}
+.edit-button{
+  /* //float:right; */
+  margin-left:200px;
+}
+.edit-button:hover{
+  color:green;
+}
+.delete-button:hover{
+  color:red
 }
 
 
@@ -92,7 +110,7 @@ height:100vh;
 .food-pic{
   grid-column: 1/2;
   /* grid-row: 1/5; */
-  width:20vw;
+  width:25vw;
   height:30vh;
   margin-top:5vw;
   margin-bottom:100vw;
@@ -208,7 +226,9 @@ margin-top:5%;
   .food-content{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-column-gap:10%;
+    grid-column-gap:20%;
+    grid-row-gap:3vh;
+
     max-width: 50vw;
     height:100vh;
     position:relative;
@@ -216,7 +236,14 @@ margin-top:5%;
     font-family: "Source Sans Pro", sans-serif;
   
   }
-
+  .edit-button{
+    float:right;
+margin-left:80px;
+  }
+  .home-image{
+    width: 200px;
+      height: 300px;
+  }
   .food-infos{
     display:grid;
     margin:auto;
@@ -224,6 +251,7 @@ margin-top:5%;
     grid-template-areas: 
     "a"
     "b";
+    grid-row-gap:1vh;
     font-family: "Raleway", sans-serif;
   }
   .food-pic{
@@ -237,5 +265,13 @@ margin-top:5%;
     margin:auto;
     width:30vw;
     padding:10px;
+    margin-left: 0px;
+    margin-top:0;
   }
+  .landingpage{
+    height:100vh;
+    width:100%;
+    background-repeat: no-repeat;
+    background-size:cover;
+    }
 }
