--- a/cultural-food/src/App.css
+++ b/cultural-food/src/App.css
@@ -60,13 +60,14 @@ height:100vh;
 }
 .home-description{
   position: relative;
- font-size:14px;
- background:rgba(0, 0, 0, 0.1);
-  bottom:50px;
-  top:0;
+ font-size:16px;
+ color:rgba(0, 0, 0);
+ background-color:rgb(255,255,255,0.8);
+  top:-110px;
   right:0;
- 
+  width:320px;
 }
+
 
 .food-names{
   font-family: 'Rubik', sans-serif;
@@ -249,6 +250,7 @@ margin-top:5%;
     margin-left:4%;
     font-family: "Source Sans Pro", sans-serif;
   }
+
   }
 
 @media only screen and (max-width: 1200px) {
@@ -264,6 +266,20 @@ margin-top:5%;
     margin: 10% auto;
     font-family: "Source Sans Pro", sans-serif;
   
+  }
+  .home-description{
+    position: relative;
+    font-size:16px;
+    color:rgb(0,0,0);
+    background-color: rgb(186, 246, 248,0.6);
+    top:-110px;
+    right:0;
+    width:200px;
+    margin:0;
+
+  }
+  .food-link{
+    visibility:hidden;
   }
   .edit-button{
     float:right;
