add another media query

--- a/cultural-food/src/App.css
+++ b/cultural-food/src/App.css
@@ -194,7 +194,6 @@ font-weight:bolder;
 background:rgb(238, 51, 51);
 padding:5px;
 width:100%;
-
 }
 .show-me{
   margin-top:5px;
@@ -246,7 +245,6 @@ margin-top:5%;
     grid-template-columns: repeat(3,1fr);
     grid-column-gap:20%;
     grid-row-gap:3vh;
-
     max-width: 50vw;
     height:100vh;
     position:relative;
@@ -263,12 +261,11 @@ margin-top:5%;
     grid-template-columns: repeat(2,1fr);
     grid-column-gap:20%;
     grid-row-gap:3vh;
-
+width:50vw;
     max-width: 50vw;
     height:100vh;
     position:relative;
     margin: 10% auto;
-    font-family: "Source Sans Pro", sans-serif;
   
   }
   .home-description{
@@ -323,5 +320,115 @@ margin-left:80px;
     background-repeat: no-repeat;
     background-size:cover;
     }
-}
+    .form{
 
+     width:60vw;
+     height:70vh;
+ margin-top: 10px;
+
+   }
+}
+@media only screen and (max-width: 600px) {
+  .food-content{
+    grid-template-columns: repeat(1,1fr);
+
+  }
+  .food-link{
+    visibility:hidden;
+  }
+  .edit-button{
+    float:right;
+margin-left:80px;
+  }
+  .home-image{
+    width: 200px;
+      height: 300px;
+  }
+  .food-infos{
+    display:grid;
+    margin:auto;
+    grid-template-columns: auto;
+    grid-template-areas: 
+    "a"
+    "b";
+    grid-row-gap:1vh;
+    font-family: "Raleway", sans-serif;
+  }
+  .food-pic{
+    grid-area:a;
+    width:50vw;
+    height:50vh;
+    margin-bottom:20px;
+  }
+  .food-info{
+    grid-area:b;
+    margin:auto;
+    width:30vw;
+    padding:10px;
+    margin-left: 0px;
+    margin-top:0;
+  }
+  .landingpage{
+    height:100vh;
+    width:100%;
+    background-repeat: no-repeat;
+    background-size:cover;
+    }
+    .nutrient-form>button{
+      margin:auto;
+     text-align: center;
+     margin-top: 5px;
+     font-size:16px;
+    position:relative;
+    font-weight:bolder;
+    background:rgb(238, 51, 51);
+    padding:5px;
+    width:100%;
+    }
+    .nutrient-Link{
+      font-size:14px;
+    }
+    .nutrient-info{
+  
+    margin:auto;
+    width:70vw;
+    height:55vh;
+    min-height:300px;
+    border:5px solid #f8cf92;
+    position:relative;
+    margin-bottom: 10%;
+    }
+    .nutrient-info>h5{
+      font-size:16px;
+      color:rgb(230, 100, 14);
+ 
+    }
+    .nutrient-food-name{
+      text-align: center;
+      font-size:25px;
+      font-weight:bolder;
+      color:rgb(235, 77, 124);
+      margin-top:30px;
+      margin-bottom:30px;
+    }
+    .home-image{
+      width: 250px;
+        height: 330px;
+    }
+    .food-pic{
+      width:60vw;
+      height:30vh;
+    
+    }
+    .food-info{
+      width:60vw;
+      padding:10px;
+      
+    }
+    .form{
+   
+     width:80vw;
+     height:60vh;
+     margin-top:10px;
+   }
+}
