--- a/cultural-food/src/App.css
+++ b/cultural-food/src/App.css
@@ -1,393 +1,493 @@
-
-body{
-  background:rgb(206, 229, 248);
+body {
+    background: rgb(206, 229, 248);
 }
 
-nav{
-  margin-left:10px;
-}
-.app-header{
-  font-family: 'Lobster', cursive;
-  text-align: center;
-  font-size: 50px;
-  letter-spacing: 10px;
-  font-weight: 900;
-  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+nav {
+    margin-left: 10px;
 }
 
-.landingpage{
-height:100vh;
-width:100%;
-background-repeat: no-repeat;
-background-size:cover;
-}
-.landing-content{
-  text-align:center;
-  padding-top:40vh;
-  z-index:1;
-  position:relative;
-}
-.landing-header{
-  font-size: 40px;
-  font-weight: bolder;
-  color:rgb(220, 245, 110);
-  font-family: 'Ranchers', cursive;
-  letter-spacing: 5px;
-}
-.landing-link{
-  height:2em;
-  font-weight: bold;
-  /* position:relative; */
-  color: rgb(17, 217, 243);
-  background-color: rgb(192, 235, 255);
-  font-size: 20px;
+.app-header {
+    font-family: 'Press Start 2P', cursive;
+    text-align: center;
+    font-size: 50px;
+    letter-spacing: 10px;
+    font-weight: 900;
+    background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-.food-content{
-  display: grid;
-  grid-template-columns: repeat(4,1fr);
-  grid-row-gap:1%;
-  grid-column-gap: 3%;
-  max-width: 100vw;
-  margin: 5% 5%;
-height:100vh;
-  font-family: "Source Sans Pro", sans-serif;
-  position:relative;
-}
-.short-info{
-  display:inline-flex;
- 
-}
-.home-description{
-  position: relative;
- font-size:16px;
- color:rgba(0, 0, 0);
- background-color:rgb(255,255,255,0.8);
-  top:-110px;
-  right:0;
-  width:320px;
+.landingpage {
+    height: 100vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-
-.food-names{
-  font-family: 'Rubik', sans-serif;
+.landing-content {
+    text-align: center;
+    padding-top: 40vh;
+    z-index: 1;
+    position: relative;
 }
-.food-likes{
-  text-align:right;
-  margin:8px;
-  margin-left:50px;
 
+.landing-header {
+    font-size: 40px;
+    font-weight: bolder;
+    color: rgb(235, 95, 14);
+    font-family: 'Ranchers', cursive;
+    letter-spacing: 5px;
+    text-shadow: -3px 2px 3px rgb(232, 248, 138);
 }
-.home-image{
-  width: 320px;
+
+@keyframes blinker {
+    50% {
+        opacity: 0;
+        color: blue;
+    }
+}
+
+.landing-link {
+    height: 2em;
+    font-weight: bold;
+    /* position:relative; */
+    color: rgb(17, 217, 243);
+    background-color: rgb(192, 235, 255);
+    font-size: 20px;
+    animation: blinker 5s linear infinite;
+}
+
+.food-content {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-row-gap: 1%;
+    grid-column-gap: 3%;
+    max-width: 100vw;
+    margin: 5% 5%;
+    height: 100vh;
+    font-family: "Source Sans Pro", sans-serif;
+    position: relative;
+}
+
+.short-info {
+    display: inline-flex;
+}
+
+.home-description {
+    position: relative;
+    font-size: 16px;
+    color: rgba(0, 0, 0);
+    background-color: rgb(255, 255, 255, 0.8);
+    top: -110px;
+    right: 0;
+    width: 320px;
+}
+
+.food-names {
+    font-family: 'Rubik', sans-serif;
+}
+
+.food-likes {
+    text-align: right;
+    margin: 8px;
+    margin-left: 50px;
+}
+
+.home-image {
+    width: 320px;
     height: 330px;
 }
-.edit-button{
-  /* //float:right; */
-  margin-left:200px;
-}
-.edit-button:hover{
-  color:green;
-}
-.delete-button:hover{
-  color:red
+
+.edit-button {
+    /* //float:right; */
+    margin-left: 200px;
 }
 
-
-
-.footer{
-  font-family: Verdana, Geneva, sans-serif;
-  /* background-color: rgb(180, 240, 248); */
-  padding: 10px;
-  height: auto;
-  width: 100%;
-  position: fixed;
-  bottom:0;
-  display: flex;
-  justify-content: center;
-  align-items:center;
-  flex-direction: row;
-}
-.footer>div{
-  margin:10px;
+.edit-button:hover {
+    color: green;
 }
 
-.food-infos{
-  display:grid;
-  grid-template-columns: 20vw,30vw;
-  grid-column-gap:  2%;
-  width:60vw;
-  height:70vh;
-  margin:70px auto;
-  font-family: "Raleway", sans-serif;
-}
-.food-pic{
-  grid-column: 1/2;
-  /* grid-row: 1/5; */
-  width:25vw;
-  height:40vh;
-  margin-top:5vw;
-  margin-bottom:20px;
-}
-.food-info{
-  grid-column:2/2;
-  width:30vw;
-  padding:10px;
-  margin-bottom:20px;
+.delete-button:hover {
+    color: red
 }
 
-.food-name{
-  
-  font-family: 'Noto Serif JP', serif;
-}
-.nutrient-Link{
-  font-size:20px;
-
-}
-.nutrient-Link:hover{
-color:red;
-
-}
-.food-description{
-  padding-top:20px;
-  margin-top:10px;
-}
-.food-region{
-  font-size:16px;
-}
-.nutrient-food-name{
-  text-align: center;
-  font-family: 'Concert One';
-  font-size:40px;
-  color:rgb(235, 77, 124);
-  margin-top:30px;
-  margin-bottom:30px;
+.footer {
+    font-family: Verdana, Geneva, sans-serif;
+    /* background-color: rgb(180, 240, 248); */
+    padding: 10px;
+    height: auto;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
 }
 
-.nutrient-info{
-  background-image: url("./components/images/nutrient.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-margin:auto;
-width:50vw;
-height:65vh;
-min-height:550px;
-border:5px solid #f892d6;
-position:relative;
-margin-bottom: 10%;
-}
-.nutrient-info>h5{
-  font-size:20px;
-  color:rgb(230, 14, 24);
-  margin:auto;
-}
-.nutrient-form>button{
-  margin:auto;
- text-align: center;
- margin-top: 5px;
- font-size:25px;
-position:relative;
-font-weight:bolder;
-background:rgb(238, 51, 51);
-padding:5px;
-width:100%;
-}
-.show-me{
-  margin-top:5px;
-  width:200px;
-  margin:auto;
-  margin-top:5px;
-  color:rgb(111, 111, 228);
-
+.footer>div {
+    margin: 10px;
 }
 
-
-.form{
-   /* border:3px solid blueviolet; */
-  background-image: url("./components/images/back.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin:auto;
-  width:50vw;
-  height:70vh;
-  min-height:850px;
-  position:relative;
-  text-shadow: #dfae4b;
-padding:10px;
-
-}
-.form>h2{
-  text-align:center;
-  color:blue;
-margin-top:5%;
-}
-.form>label, .form>input,.form>textarea{
-  display:block;
-  width:100%;
-  font-size:20px;
-
-}
-.form>label{
-  margin-top:3%;
+.food-infos {
+    display: grid;
+    grid-template-columns: 20vw, 30vw;
+    grid-column-gap: 2%;
+    width: 60vw;
+    height: 70vh;
+    margin: 70px auto;
+    font-family: "Raleway", sans-serif;
 }
 
-.form>button{
-  float:right;
-  font-size:20px;
-  border-radius:5px;
+.food-pic {
+    grid-column: 1/2;
+    /* grid-row: 1/5; */
+    width: 25vw;
+    height: 40vh;
+    margin-top: 5vw;
+    margin-bottom: 20px;
 }
+
+.food-info {
+    grid-column: 2/2;
+    width: 30vw;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.food-name {
+    font-family: 'Noto Serif JP', serif;
+    position: relative;
+    color: rgba(13, 46, 235, 0.8);
+    animation-name: example;
+    text-shadow: 2px 2px #6547ec;
+    animation: example 10s infinite;
+}
+
+@keyframes example {
+    0% {
+        color: red;
+        left: 0px;
+        top: 0px;
+    }
+    25% {
+        color: yellow;
+        left: 150px;
+        top: 0px;
+        font-size: 30px;
+    }
+    50% {
+        color: blue;
+        left: 100px;
+        top: 300px;
+        font-size: 40px;
+        letter-spacing: 10px;
+    }
+    75% {
+        color: green;
+        left: 0px;
+        top: 300px;
+    }
+    100% {
+        color: red;
+        left: 0px;
+        top: 0px;
+    }
+}
+
+.nutrient-Link {
+    font-size: 20px;
+}
+
+.nutrient-Link:hover {
+    color: red;
+}
+
+.food-description {
+    padding-top: 20px;
+    margin-top: 10px;
+}
+
+.food-region {
+    font-size: 16px;
+}
+
+.nutrient-food-name {
+    text-align: center;
+    font-family: 'Concert One';
+    font-size: 40px;
+    color: rgb(235, 77, 124);
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-shadow: 4px 3px #faab97;
+}
+
+.nutrient-info {
+    background-image: url("./components/images/nutrient.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: auto;
+    width: 50vw;
+    height: 65vh;
+    min-height: 550px;
+    border: 5px solid #f892d6;
+    position: relative;
+    margin-bottom: 10%;
+}
+
+.nutrient-info>h5 {
+    font-size: 20px;
+    color: rgb(230, 14, 24);
+    margin: auto;
+}
+
+.nutrient-form>button {
+    margin: auto;
+    text-align: center;
+    margin-top: 5px;
+    font-size: 25px;
+    position: relative;
+    font-weight: bolder;
+    background: rgb(238, 51, 51);
+    padding: 5px;
+    width: 100%;
+}
+
+.show-me {
+    margin-top: 5px;
+    width: 200px;
+    margin: auto;
+    margin-top: 5px;
+    color: rgb(111, 111, 228);
+}
+
+.form {
+    /* border:3px solid blueviolet; */
+    background-image: url("./components/images/back.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: auto;
+    width: 50vw;
+    height: 70vh;
+    min-height: 850px;
+    position: relative;
+    text-shadow: #dfae4b;
+    padding: 10px;
+}
+
+.form>h2 {
+    text-align: center;
+    color: blue;
+    margin-top: 5%;
+}
+
+.form>label,
+.form>input,
+.form>textarea {
+    display: block;
+    width: 100%;
+    font-size: 20px;
+}
+
+.form>label {
+    margin-top: 3%;
+}
+
+.form>button {
+    float: right;
+    font-size: 20px;
+    border-radius: 5px;
+}
+
 @media only screen and (max-width: 1450px) {
-  .food-content{
-    grid-template-columns: repeat(3,1fr);
-    grid-column-gap:20%;
-    grid-row-gap:3vh;
-    max-width: 50vw;
-    margin: 10% auto;
-    margin-left:4%;
-  }
-
-  }
+    .food-content {
+        grid-template-columns: repeat(3, 1fr);
+        grid-column-gap: 20%;
+        grid-row-gap: 3vh;
+        max-width: 50vw;
+        margin: 10% auto;
+        margin-left: 4%;
+    }
+    @keyframes example {
+        0% {
+            color: red;
+            left: 0px;
+            top: 0px;
+        }
+        25% {
+            color: yellow;
+            left: 150px;
+            top: 0px;
+            font-size: 30px;
+        }
+        50% {
+            color: blue;
+            left: 100px;
+            top: 300px;
+            font-size: 40px;
+            letter-spacing: 10px;
+        }
+        75% {
+            color: green;
+            left: 0px;
+            top: 300px;
+        }
+        100% {
+            color: red;
+            left: 0px;
+            top: 0px;
+        }
+    }
+}
 
 @media only screen and (max-width: 1200px) {
-  .food-content{
-    grid-template-columns: repeat(2,1fr);
-    grid-column-gap:20%;
-    grid-row-gap:3vh;
-    width:50vw;
-    max-width: 50vw;
-    margin: 10% auto;
-  
-  }
-  .home-description{
-    background-color: rgb(186, 246, 248,0.6);
-    top:-250px;
-    width:200px;
-    /* margin:0; */
-
-  }
-  .food-link{
-    visibility:hidden;
-  }
-  .edit-button{
-    float:right;
-margin-left:80px;
-  }
-  .home-image{
-    width: 200px;
-      height: 300px;
-  }
-  .food-infos{
-    margin:auto;
-    grid-template-columns: auto;
-    grid-template-areas: 
-    "a"
-    "b";
-    grid-row-gap:1vh;
-  }
-  .food-pic{
-    grid-area:a;
-    width:40vw;
-    height:40vh;
-    margin-bottom:20px;
-  }
-  .food-info{
-    grid-area:b;
-    margin:auto;
-    width:50vw;
-    margin-left: 0px;
-    margin-top:0;
-  }
-    .form{
-width:60vw;
-margin-top: 10px;
-}
+    .food-content {
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 20%;
+        grid-row-gap: 3vh;
+        width: 50vw;
+        max-width: 50vw;
+        margin: 10% auto;
+    }
+    .home-description {
+        background-color: rgb(186, 246, 248, 0.6);
+        top: -250px;
+        width: 200px;
+        /* margin:0; */
+    }
+    .food-link {
+        visibility: hidden;
+    }
+    .edit-button {
+        float: right;
+        margin-left: 80px;
+    }
+    .home-image {
+        width: 200px;
+        height: 300px;
+    }
+    .food-infos {
+        margin: auto;
+        grid-template-columns: auto;
+        grid-template-areas: "a" "b";
+        grid-row-gap: 1vh;
+    }
+    .food-pic {
+        grid-area: a;
+        width: 40vw;
+        height: 40vh;
+        margin-bottom: 20px;
+    }
+    .food-info {
+        grid-area: b;
+        margin: auto;
+        width: 50vw;
+        margin-left: 0px;
+        margin-top: 0;
+    }
+    .form {
+        width: 60vw;
+        margin-top: 10px;
+    }
+    @keyframes example {
+        0% {
+            color: red;
+            left: 0px;
+            top: 0px;
+        }
+        25% {
+            color: yellow;
+            left: 150px;
+            top: 0px;
+            font-size: 30px;
+        }
+        50% {
+            color: blue;
+            left: 100px;
+            top: -300px;
+            font-size: 40px;
+            letter-spacing: 10px;
+        }
+        75% {
+            color: green;
+            left: 0px;
+            top: -300px;
+        }
+        100% {
+            color: red;
+            left: 0px;
+            top: 0px;
+        }
+    }
 }
 
 @media only screen and (max-width: 600px) {
-  .food-content{
-    grid-template-columns: repeat(1,1fr);
-
-  }
-  .food-link{
-    visibility:hidden;
-  }
-  .edit-button{
-    float:right;
-margin-left:80px;
-  }
-  .home-image{
-    width: 200px;
-      height: 300px;
-  }
-  .food-infos{
-  
-    margin:auto;
-    grid-template-columns: auto;
-    grid-template-areas: 
-    "a"
-    "b";
-    grid-row-gap:1vh;
-  }
-  .food-pic{
-    grid-area:a;
-    width:50vw;
-    height:50vh;
-  }
-  .food-info{
-    grid-area:b;
-    margin:auto;
-
-    margin-left: 0px;
-    margin-top:0;
-
-  }
- 
-  
-    .nutrient-Link{
-      font-size:14px;
+    .food-content {
+        grid-template-columns: repeat(1, 1fr);
     }
-    .nutrient-info{
- 
-    width:70vw;
-    height:55vh;
-    min-height:300px;
-    border:5px solid #f8cf92;
-  
+    .food-link {
+        visibility: hidden;
     }
-    .nutrient-info>h5{
-      font-size:16px;
-      color:rgb(230, 100, 14);
- 
+    .edit-button {
+        float: right;
+        margin-left: 80px;
     }
-    .home-description{
-      width:250px;
+    .home-image {
+        width: 200px;
+        height: 300px;
     }
-    .nutrient-food-name{
-
-      font-size:25px;
-      font-weight:bolder;
-
+    .food-infos {
+        margin: auto;
+        grid-template-columns: auto;
+        grid-template-areas: "a" "b";
+        grid-row-gap: 1vh;
     }
-    .home-image{
-      width: 250px;
+    .food-pic {
+        grid-area: a;
+        width: 50vw;
+        height: 50vh;
+    }
+    .food-info {
+        grid-area: b;
+        margin: auto;
+        margin-left: 0px;
+        margin-top: 0;
+    }
+    .nutrient-Link {
+        font-size: 14px;
+    }
+    .nutrient-info {
+        width: 70vw;
+        height: 55vh;
+        min-height: 300px;
+        border: 5px solid #f8cf92;
+    }
+    .nutrient-info>h5 {
+        font-size: 16px;
+        color: rgb(230, 100, 14);
+    }
+    .home-description {
+        width: 250px;
+    }
+    .nutrient-food-name {
+        font-size: 25px;
+        font-weight: bolder;
+    }
+    .home-image {
+        width: 250px;
         height: 330px;
     }
-    .food-pic{
-      width:60vw;
-      height:30vh;
-    
+    .food-pic {
+        width: 60vw;
+        height: 30vh;
     }
-    .food-info{
-      width:60vw;
-      padding:10px;
-      
+    .food-info {
+        width: 60vw;
+        padding: 10px;
     }
-    .form{
-   
-     width:80vw;
-     height:60vh;
-     margin-top:10px;
-   }
+    .form {
+        width: 80vw;
+        height: 60vh;
+        margin-top: 10px;
+    }
 }
