--- a/cultural-food/src/components/food-details/food.css
+++ b/cultural-food/src/components/food-details/food.css
@@ -5,9 +5,10 @@
   grid-column-gap: 2%;
   width: 60vw;
   height: 70vh;
+  min-height:500px;
   margin: 70px auto;
   font-family: "Raleway", sans-serif;
-  margin-bottom: 20vh;
+  margin-bottom: 20px;
 
 }
 
@@ -129,7 +130,8 @@
       margin: auto;
       grid-template-columns: auto;
       grid-template-areas: "a" "b";
-      grid-row-gap: 1vh;
+      grid-row-gap: 2vh;
+      margin-bottom:180px;
   }
   .food-pic {
       grid-area: a;
@@ -183,7 +185,7 @@
     grid-template-columns: auto;
     grid-template-areas: "a" "b";
     grid-row-gap: 1vh;
-    margin-bottom: 40px;
+    margin-bottom: 120px;
 }
 .food-pic {
     grid-area: a;
