--- a/cultural-food/src/components/footer/footer.css
+++ b/cultural-food/src/components/footer/footer.css
@@ -1,20 +1,19 @@
 
 footer {
   font-family: Verdana, Geneva, sans-serif;
-  background-color: rgb(255, 255, 255,0.5);
+  background-color: rgb(255, 255, 255,0.3);
   padding: 10px;
   height: auto;
   width: 100%;
+  position: relative;
+  bottom: 0;
+}
+.footer{
   display: flex;
-
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  position: fixed;
-  bottom: 0vh;
-
 }
-
 .footer>div {
   margin: 10px;
 }
