--- a/cultural-food/src/components/homepage/homepage.css
+++ b/cultural-food/src/components/homepage/homepage.css
@@ -5,7 +5,8 @@
   grid-row-gap: 1%;
   grid-column-gap: 3%;
   max-width: 100vw;
-  margin: 5% 5%;
+  margin: 5% auto;
+  min-height:800px;
   /* height: 90vh; */
   font-family: "Source Sans Pro", sans-serif;
   position: relative;
