--- a/cultural-food/src/components/form/form.css
+++ b/cultural-food/src/components/form/form.css
@@ -51,6 +51,12 @@
   height: 60vh;
   margin-top: 10px;
 }
+.form>label,
+.form>input,
+.form>textarea {
+  width: 100%;
+  font-size: 16px;
+}
 }
 
 
