--- a/cultural-food/src/components/form/form.css
+++ b/cultural-food/src/components/form/form.css
@@ -27,6 +27,8 @@
   display: block;
   width: 100%;
   font-size: 20px;
+  margin:auto;
+
 }
 
 .form>label {
@@ -54,8 +56,9 @@
 .form>label,
 .form>input,
 .form>textarea {
-  width: 90%;
+  width: 100%;
   font-size: 16px;
+  margin:auto;
 }
 }
 
