--- a/cultural-food/src/components/food-details/food.css
+++ b/cultural-food/src/components/food-details/food.css
@@ -131,6 +131,7 @@
       grid-template-columns: auto;
       grid-template-areas: "a" "b";
       min-height:1000px;
+      margin-bottom:200px;
     }
   .food-pic {
       grid-area: a;
