--- a/cultural-food/src/components/food-details/food.css
+++ b/cultural-food/src/components/food-details/food.css
@@ -186,6 +186,8 @@
     grid-template-areas: "a" "b";
     grid-row-gap: 10px;
     min-height:1000px;
+    margin-bottom:300px;
+
   }
 .food-pic {
     grid-area: a;
