--- a/cultural-food/src/components/food-details/food.css
+++ b/cultural-food/src/components/food-details/food.css
@@ -184,7 +184,7 @@
     margin: auto;
     grid-template-columns: auto;
     grid-template-areas: "a" "b";
-    grid-row-gap: 10px;
+    /* grid-row-gap: 10px; */
     margin-bottom:100px;
 
   }
