--- a/cultural-food/src/components/form/form.css
+++ b/cultural-food/src/components/form/form.css
@@ -32,6 +32,7 @@
 }
 .form>textarea{
   min-height:150px;
+  max-height: 200px;
 }
 .form>label {
   margin-top: 3%;
@@ -65,6 +66,7 @@
 }
 .form>textarea{
   min-height:200px;
+  max-height:220px;
 }
 }
 
