--- a/cultural-food/src/components/homepage/homepage.css
+++ b/cultural-food/src/components/homepage/homepage.css
@@ -10,6 +10,7 @@
   /* height: 90vh; */
   font-family: "Source Sans Pro", sans-serif;
   position: relative;
+  margin-left:20px;
   margin-bottom: 10vh;
 }
 
