--- a/cultural-food/src/components/food-details/food.css
+++ b/cultural-food/src/components/food-details/food.css
@@ -14,18 +14,19 @@
 
 .food-pic {
   grid-column: 1/2;
-  width: 25vw;
-  height: 40vh;
-  margin-top: 5vw;
-  margin-bottom: 20px;
+  width: 100%;
+  height: 50vh;
+  margin-top: 50px;
   animation: blinker 10s linear infinite;
+  border-radius: 50%;
 }
 
 .food-info {
   grid-column: 2/2;
-  width: 30vw;
+  width: 100%;
   padding: 10px;
   margin-bottom: 20px;
+  
 }
 
 .food-name {
@@ -135,7 +136,7 @@
     }
   .food-pic {
       grid-area: a;
-      width: 40vw;
+      width: 100%;
       height: 40vh;
       margin-bottom: 20px;
   }
@@ -178,19 +179,25 @@
       }
   }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 400px) {
 
   .food-infos {
     margin: auto;
     grid-template-columns: auto;
     grid-template-areas: "a" "b";
     margin-bottom:60px;
+    width:100%;
+    margin-left:10px;
+    /* margin-top:20px; */
+
 
   }
 .food-pic {
     grid-area: a;
-    width: 60vw;
+    width: 100%;
     height: 400px;
+  
+
 }
 .food-info {
     grid-area: b;
