--- a/cultural-food/src/components/homepage/homepage.css
+++ b/cultural-food/src/components/homepage/homepage.css
@@ -17,6 +17,11 @@
 .short-info {
   display: inline-flex;
 }
+.each-food{
+  background-color:rgba(248, 247, 186, 0.6);
+  border-radius: 10px;
+
+}
 
 .home-description {
   position: relative;
@@ -33,20 +38,29 @@
 }
 
 .food-likes {
-  text-align: right;
+  /* text-align: right; */
   margin: 8px;
   margin-left: 50px;
 }
 
 .home-image {
-  width: 320px;
+  width: 100%;
   height: 330px;
+  border-radius: 10px;
+
+
 }
 
 .edit-button {
+  float:right;
   margin-left: 200px;
-}
+  border-radius: 5px;
 
+}
+.delete-button{
+  border-radius: 5px;
+
+}
 .edit-button:hover {
   color: green;
 }
@@ -54,6 +68,7 @@
 .delete-button:hover {
   color: red
 }
+
 @media only screen and (max-width: 1450px) {
 
   .food-content {
@@ -90,7 +105,7 @@
     margin-left: 80px;
 }
 .home-image {
-    width: 200px;
+    width: 100%;
     height: 300px;
 }
 }
@@ -109,15 +124,12 @@
     margin-left: 80px;
 }
 .home-image {
-    width: 200px;
+    width: 100%;
     height: 300px;
 }
 
 .home-description {
   width: 250px;
 }
-.home-image {
-  width: 250px;
-  height: 330px;
-}
+
 }
